--- a/TeslaWaysApp/package.json
+++ b/TeslaWaysApp/package.json
@@ -20,10 +20,11 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.15.0",
+    "@ionic-native/core": "^4.15.0",
     "@ionic-native/file": "^4.16.0",
     "@ionic-native/file-transfer": "^4.16.0",
     "@ionic-native/geolocation": "^4.16.0",
+    "@ionic-native/google-maps": "^4.14.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
@@ -32,6 +33,7 @@
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-googlemaps": "2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -66,7 +68,12 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyAz1sU7SQbb-IUY6JlXr3xWDmrQobct5aM",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
