--- a/TeslaWaysApp/package.json
+++ b/TeslaWaysApp/package.json
@@ -23,22 +23,28 @@
     "@ionic-native/core": "^4.16.0",
     "@ionic-native/file": "^4.16.0",
     "@ionic-native/file-transfer": "^4.16.0",
+    "@ionic-native/geofence": "^4.16.0",
     "@ionic-native/geolocation": "^4.16.0",
     "@ionic-native/google-maps": "^4.14.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
+    "cordova": "^7.1.0",
     "cordova-android": "7.1.1",
+    "cordova-plugin-add-swift-support": "1.6.0",
+    "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "6.0.1",
-    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-geofence": "0.7.0",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-googlemaps": "2.4.6",
+    "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "es6-promise-plugin": "4.2.2",
     "ionic-angular": "3.9.2",
     "ionic-image-loader": "^4.2.1",
     "ionicons": "3.0.0",
@@ -73,10 +79,9 @@
         "API_KEY_FOR_ANDROID": "AIzaSyAz1sU7SQbb-IUY6JlXr3xWDmrQobct5aM",
         "PLAY_SERVICES_VERSION": "15.0.1",
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-geofence": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
