--- a/TeslaWaysApp/package.json
+++ b/TeslaWaysApp/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/geofence": "^4.16.0",
     "@ionic-native/geolocation": "^4.16.0",
     "@ionic-native/google-maps": "^4.14.0",
+    "@ionic-native/network": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
@@ -41,6 +42,7 @@
     "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -80,7 +82,8 @@
         "PLAY_SERVICES_VERSION": "15.0.1",
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-geofence": {}
+      "cordova-plugin-geofence": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": []
   }
