--- a/TeslaWaysApp/package.json
+++ b/TeslaWaysApp/package.json
@@ -29,7 +29,7 @@
     "@ionic-native/network": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
     "cordova": "^7.1.0",
     "cordova-android": "7.1.1",
     "cordova-plugin-add-swift-support": "1.6.0",
@@ -46,6 +46,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.5.0",
     "es6-promise-plugin": "4.2.2",
     "ionic-angular": "3.9.2",
     "ionic-image-loader": "^4.2.1",
@@ -83,7 +84,8 @@
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-geofence": {},
-      "cordova-plugin-network-information": {}
+      "cordova-plugin-network-information": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": []
   }
