--- a/TeslaWaysApp/package.json
+++ b/TeslaWaysApp/package.json
@@ -32,22 +32,22 @@
     "@ionic/storage": "^2.2.0",
     "cordova": "^7.1.0",
     "cordova-android": "7.1.1",
-    "cordova-plugin-add-swift-support": "1.6.0",
-    "cordova-plugin-compat": "1.2.0",
+    "cordova-plugin-add-swift-support": "^1.6.0",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-geofence": "0.7.0",
+    "cordova-plugin-geofence": "^0.7.0",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^2.2.5",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.5.0",
-    "es6-promise-plugin": "4.2.2",
+    "cordova-sqlite-storage": "^2.5.2",
+    "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
     "ionic-image-loader": "^4.2.1",
     "ionicons": "3.0.0",
@@ -58,7 +58,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "3.2.1",
     "@ionic/lab": "1.0.11",
     "typescript": "~2.6.2"
   },
