--- a/TeslaWaysApp/package.json
+++ b/TeslaWaysApp/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/network": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
+    "@ionic-native/vibration": "^4.18.0",
     "@ionic/storage": "^2.2.0",
     "cordova": "^7.1.0",
     "cordova-android": "7.1.1",
@@ -45,6 +46,7 @@
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-vibration": "^3.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.5.2",
     "es6-promise-plugin": "^4.2.2",
@@ -85,7 +87,8 @@
       },
       "cordova-plugin-geofence": {},
       "cordova-plugin-network-information": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-vibration": {}
     },
     "platforms": []
   }
