--- a/TeslaWaysApp/package.json
+++ b/TeslaWaysApp/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/geofence": "^4.16.0",
     "@ionic-native/geolocation": "^4.16.0",
     "@ionic-native/google-maps": "^4.14.0",
+    "@ionic-native/location-accuracy": "^4.18.0",
     "@ionic-native/network": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
@@ -44,6 +45,7 @@
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.5",
     "cordova-plugin-network-information": "^2.0.1",
+    "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-vibration": "^3.1.0",
@@ -88,7 +90,8 @@
       "cordova-plugin-geofence": {},
       "cordova-plugin-network-information": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-vibration": {}
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-request-location-accuracy": {}
     },
     "platforms": []
   }
